--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "build": "node-sass sass/main.scss css/style.css"
   },
   "keywords": [],
   "author": "",
